# cli_keyword_suggestion_generator

./: AGENTS.md  PROJECT_LOG.md  README.md  coffee-maker-espresso-machine-keywords.csv  pyproject.toml
.keyword-generator/: source-health.ini
docs/: component-sources.md
examples/: notebook-sources.yaml  sources.yaml
notebooks/: SEOBoss_Pro_v2_KeywordBoss.ipynb  free_keyword_endpoint_tester_colab_v2_merged.ipynb
src/keyword_generator/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/keyword_generator/collectors/: engine.py  parsers.py  request_builder.py
src/keyword_generator/exporters/: files.py
src/keyword_generator/processors/: deduplicate.py  normalize.py
src/keyword_generator/runtime/: source_health.py
src/keyword_generator/ui/: __init__.py  dashboard.py
tests/unit/: test_core.py  test_dashboard.py  test_health_and_generic.py
