[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keyword-suggestion-generator"
version = "0.1.0"
description = "Deterministic, provenance-preserving keyword research CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "pydantic>=2.7", "httpx>=0.27", "PyYAML>=6", "beautifulsoup4>=4.12"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5"]

[project.scripts]
keywords = "keyword_generator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/keyword_generator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
extend-exclude = ["notebooks"]
